[package]
name = "multi_thread_web_crawler"
version = "0.1.0"
edition = "2023"
authors = ["The Man bibibik1697@gmail.com"]
description = "An asynchronous library for fetching Pokemon data using the PokeAPI"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }